--- a/classes/_ioc_container_.container.html
+++ b/classes/_ioc_container_.container.html
@@ -131,7 +131,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L12">ioc/Container.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L12">ioc/Container.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -153,7 +153,7 @@
 					<div class="tsd-signature tsd-kind-icon">AURELIA_<wbr>STRATEGY_<wbr>RESOLVER_<wbr>INSTANCE_<wbr>STRATEGY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L92">ioc/Container.ts:92</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L92">ioc/Container.ts:92</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -163,7 +163,7 @@
 					<div class="tsd-signature tsd-kind-icon">configuration<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_ioc_container_.icontainerconfiguration.html" class="tsd-signature-type">IContainerConfiguration</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L12">ioc/Container.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L12">ioc/Container.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">debug<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L9">ioc/Container.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L9">ioc/Container.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -183,7 +183,7 @@
 					<div class="tsd-signature tsd-kind-icon">parent<span class="tsd-signature-symbol">:</span> <a href="_ioc_container_.container.html" class="tsd-signature-type">Container</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L10">ioc/Container.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L10">ioc/Container.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -193,7 +193,7 @@
 					<div class="tsd-signature tsd-kind-icon">wrapped<wbr>Container<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">AureliaContainer</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L11">ioc/Container.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L11">ioc/Container.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -210,7 +210,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L69">ioc/Container.ts:69</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L69">ioc/Container.ts:69</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -233,7 +233,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L97">ioc/Container.ts:97</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L97">ioc/Container.ts:97</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -256,7 +256,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L73">ioc/Container.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L73">ioc/Container.ts:73</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -279,7 +279,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L181">ioc/Container.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L181">ioc/Container.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -301,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L194">ioc/Container.ts:194</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L194">ioc/Container.ts:194</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -326,7 +326,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L36">ioc/Container.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L36">ioc/Container.ts:36</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -361,7 +361,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L166">ioc/Container.ts:166</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L166">ioc/Container.ts:166</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -384,7 +384,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L150">ioc/Container.ts:150</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L150">ioc/Container.ts:150</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -407,7 +407,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L133">ioc/Container.ts:133</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L133">ioc/Container.ts:133</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -438,7 +438,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L121">ioc/Container.ts:121</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L121">ioc/Container.ts:121</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -461,7 +461,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L71">ioc/Container.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L71">ioc/Container.ts:71</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -484,7 +484,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L164">ioc/Container.ts:164</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L164">ioc/Container.ts:164</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -507,7 +507,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L93">ioc/Container.ts:93</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L93">ioc/Container.ts:93</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -538,7 +538,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/ioc/Container.ts#L70">ioc/Container.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc/Container.ts#L70">ioc/Container.ts:70</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -587,16 +587,25 @@
 						<a href="../modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
@@ -608,10 +617,16 @@
 						<a href="../modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
