--- a/interfaces/_ioc_react_dependencycontainercontext_.iprops.html
+++ b/interfaces/_ioc_react_dependencycontainercontext_.iprops.html
@@ -77,6 +77,10 @@
 					</li>
 				</ul>
 			</section>
+			<section class="tsd-panel tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -99,7 +103,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">React.ReactNode</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/ioc-react/DependencyContainerContext.tsx#L7">ioc-react/DependencyContainerContext.tsx:7</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/ioc-react/DependencyContainerContext.tsx#L8">ioc-react/DependencyContainerContext.tsx:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -109,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">container<span class="tsd-signature-symbol">:</span> <a href="../classes/_ioc_container_.container.html" class="tsd-signature-type">Container</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/5a07ae3/src/ioc-react/DependencyContainerContext.tsx#L6">ioc-react/DependencyContainerContext.tsx:6</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/8aae25b/src/ioc-react/DependencyContainerContext.tsx#L7">ioc-react/DependencyContainerContext.tsx:7</a></li>
 						</ul>
 					</aside>
 				</section>
